<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cn.cloudcharts</groupId>
        <artifactId>xingyun</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <groupId>cn.cloudcharts</groupId>
    <artifactId>xingyun-metadata</artifactId>
    <name>xingyun-metadata</name>

    <dependencies>
        <dependency>
            <groupId>cn.cloudcharts</groupId>
            <artifactId>xingyun-common</artifactId>
        </dependency>
        <dependency>
            <groupId>cn.cloudcharts</groupId>
            <artifactId>parser-starrocks</artifactId>
        </dependency>
        <dependency>
            <groupId>cn.cloudcharts</groupId>
            <artifactId>dfs-service</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
        </dependency>

        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>commons-dbutils</groupId>
            <artifactId>commons-dbutils</artifactId>
            <version>1.6</version>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
